fixed ecova home two about section sub head text size and psudo element left alignment for all screen size

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -1462,6 +1462,11 @@ img {
        column-gap: 1rem;
 }
 
+.gap-x-0 {
+  -moz-column-gap: 0px;
+       column-gap: 0px;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -2326,6 +2331,10 @@ img {
   line-height: 2.5rem;
 }
 
+.leading-\[3\.25rem\] {
+  line-height: 3.25rem;
+}
+
 .tracking-widest {
   letter-spacing: 0.1em;
 }
@@ -2336,6 +2345,14 @@ img {
 
 .tracking-wide {
   letter-spacing: 0.025em;
+}
+
+.tracking-\[0\.5rem\] {
+  letter-spacing: 0.5rem;
+}
+
+.tracking-\[1rem\] {
+  letter-spacing: 1rem;
 }
 
 .text-white {
@@ -2788,6 +2805,36 @@ img {
   height: 8rem;
 }
 
+.before\:h-\[0\.12rem\]::before {
+  content: var(--tw-content);
+  height: 0.12rem;
+}
+
+.before\:h-\[0\.13rem\]::before {
+  content: var(--tw-content);
+  height: 0.13rem;
+}
+
+.before\:h-\[2\.2px\]::before {
+  content: var(--tw-content);
+  height: 2.2px;
+}
+
+.before\:h-\[2px\]::before {
+  content: var(--tw-content);
+  height: 2px;
+}
+
+.before\:h-\[2\.5px\]::before {
+  content: var(--tw-content);
+  height: 2.5px;
+}
+
+.before\:h-\[0\.125rem\]::before {
+  content: var(--tw-content);
+  height: 0.125rem;
+}
+
 .before\:w-\[7\.5rem\]::before {
   content: var(--tw-content);
   width: 7.5rem;
@@ -2811,6 +2858,11 @@ img {
 .before\:w-24::before {
   content: var(--tw-content);
   width: 6rem;
+}
+
+.before\:w-\[8rem\]::before {
+  content: var(--tw-content);
+  width: 8rem;
 }
 
 .before\:rounded::before {
@@ -2955,6 +3007,36 @@ img {
   bottom: 0px;
 }
 
+.after\:left-1::after {
+  content: var(--tw-content);
+  left: 0.25rem;
+}
+
+.after\:left-0\.5::after {
+  content: var(--tw-content);
+  left: 0.125rem;
+}
+
+.after\:left-\[3px\]::after {
+  content: var(--tw-content);
+  left: 3px;
+}
+
+.after\:left-\[2\.5px\]::after {
+  content: var(--tw-content);
+  left: 2.5px;
+}
+
+.after\:left-\[2px\]::after {
+  content: var(--tw-content);
+  left: 2px;
+}
+
+.after\:left-\[0\.125rem\]::after {
+  content: var(--tw-content);
+  left: 0.125rem;
+}
+
 .after\:z-10::after {
   content: var(--tw-content);
   z-index: 10;
@@ -3020,6 +3102,26 @@ img {
 .after\:w-\[2rem\]::after {
   content: var(--tw-content);
   width: 2rem;
+}
+
+.after\:w-\[0\.2rem\]::after {
+  content: var(--tw-content);
+  width: 0.2rem;
+}
+
+.after\:w-\[0\.1rem\]::after {
+  content: var(--tw-content);
+  width: 0.1rem;
+}
+
+.after\:w-\[0\.2\.5rem\]::after {
+  content: var(--tw-content);
+  width: 0.2.5rem;
+}
+
+.after\:w-\[0\.2\.2rem\]::after {
+  content: var(--tw-content);
+  width: 0.2.2rem;
 }
 
 .after\:-translate-y-1\/2::after {
@@ -3750,8 +3852,20 @@ img {
     font-weight: 400;
   }
 
+  .sm\:font-bold {
+    font-weight: 700;
+  }
+
+  .sm\:font-semibold {
+    font-weight: 600;
+  }
+
   .sm\:leading-\[3rem\] {
     line-height: 3rem;
+  }
+
+  .sm\:tracking-normal {
+    letter-spacing: 0em;
   }
 }
 
@@ -4573,6 +4687,11 @@ img {
   .xl\:gap-x-3 {
     -moz-column-gap: 0.75rem;
          column-gap: 0.75rem;
+  }
+
+  .xl\:gap-x-4 {
+    -moz-column-gap: 1rem;
+         column-gap: 1rem;
   }
 
   .xl\:bg-transparent {
